--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "mysql2": "^1.5.2",
+    "packages": "0.0.8",
     "sequelize": "^5.22.3"
   },
   "devDependencies": {
